# N-body-simulation

./: README.md
covid_sim/corona/: CMakeLists.txt  main.cpp
covid_sim/corona_body/: CMakeLists.txt  carona_body.cpp  carona_body.h
covid_sim/corona_physics/: CMakeLists.txt  carona_physics.cpp  carona_physics.h
covid_sim/corona_rk45/: CMakeLists.txt  carona_rk45.cpp  carona_rk45.h
gravity_sim/body/: CMakeLists.txt  body.cpp  body.h
gravity_sim/function/: CMakeLists.txt  function.cpp  function.h
gravity_sim/physics/: CMakeLists.txt  physics.cpp  physics.h
gravity_sim/rk45/: CMakeLists.txt  rk45.cpp  rk45.h
gravity_sim/rk45/RK_methods/: CMakeLists.txt
gravity_sim/rk45/RK_methods/Cash_Karp/: CMakeLists.txt  a.txt  b.txt  b_.txt  c.txt  constants.h
gravity_sim/rk45/RK_methods/Dormand_Prince/: CMakeLists.txt  a.txt  b.txt  b_.txt  c.txt  constants.h
gravity_sim/rk45/RK_methods/RK4/: CMakeLists.txt  a.txt  b.txt  c.txt  constants.h
gravity_sim/solve/: CMakeLists.txt  main.cpp
gravity_sim/test_blue_screens/: CMakeLists.txt  main.cpp
